--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   steps: ^1.0.1
-  url_launcher: ^5.5.0
+  #url_launcher: ^5.5.0
+  url_launcher: ^6.1.11
   font_awesome_flutter: ^8.8.1
   scroll_to_index:
   flutter_svg: ^1.0.2
   carousel_slider: ^4.2.1
   google_fonts: ^4.0.1
+  youtube_player_iframe: ^4.0.4
 
 dev_dependencies:
   flutter_test:
